Bug 989053 - Make box model regions on page content more visible. r=pbrosset
UltraBlame original commit: ab3136b93cd054ca83b08435595afa89ef7ac269

--- a/browser/themes/shared/devtools/layoutview.css
+++ b/browser/themes/shared/devtools/layoutview.css
@@ -103,13 +103,34 @@ dotted
 ;
 color
 :
-hsl
+var
 (
-210
-53
-%
-45
-%
+-
+-
+theme
+-
+selection
+-
+color
+)
+;
+}
+.
+margin
+.
+size
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
 )
 ;
 }
@@ -121,7 +142,7 @@ background
 color
 :
 #
-80d4ff
+87ceeb
 ;
 border
 -
@@ -186,7 +207,7 @@ background
 color
 :
 #
-66cc52
+6a5acd
 ;
 }
 #
@@ -197,7 +218,7 @@ background
 color
 :
 #
-ffe431
+444444
 ;
 border
 -
@@ -227,13 +248,29 @@ background
 color
 :
 #
-d89b28
+edff64
 ;
+/
+*
+This
+opacity
+applies
+to
+all
+of
+the
+regions
+since
+they
+are
+nested
+.
+*
+/
 opacity
 :
-0
 .
-6
+8
 ;
 }
 .
